// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transpiler 스냅샷 > bubblesort → cpp 1`] = `
"·              | void bubblesort(std::vector<int>& arr) {
·              |     int n = arr.size();
·              |     for (int p = 0; p < n - 1; ++p) {
·              |         bool swapped = false;
·              |         for (int j = 0; j < (n - 1) - p; ++j) {
compare        |             if (arr[j] > arr[j + 1]) {
swap           |                 std::swap(arr[j], arr[j + 1]);
·              |                 swapped = true;
·              |             }
·              |         }
pass-end       |         if (!swapped) {
·              |             break;
·              |         }
·              |     }
·              | }"
`;

exports[`Transpiler 스냅샷 > bubblesort → csharp 1`] = `
"·              | static void bubblesort(int[] arr) {
·              |     int n = arr.Length;
·              |     for (int p = 0; p < n - 1; p++) {
·              |         bool swapped = false;
·              |         for (int j = 0; j < (n - 1) - p; j++) {
compare        |             if (arr[j] > arr[j + 1]) {
swap           |                 (arr[j], arr[j + 1]) = (arr[j + 1], arr[j]);
·              |                 swapped = true;
·              |             }
·              |         }
pass-end       |         if (!swapped) {
·              |             break;
·              |         }
·              |     }
·              | }"
`;

exports[`Transpiler 스냅샷 > bubblesort → java 1`] = `
"·              | static void bubblesort(int[] arr) {
·              |     int n = arr.length;
·              |     for (int p = 0; p < n - 1; p++) {
·              |         boolean swapped = false;
·              |         for (int j = 0; j < (n - 1) - p; j++) {
compare        |             if (arr[j] > arr[j + 1]) {
swap           |                 int tmp1 = arr[j];
swap           |                 arr[j] = arr[j + 1];
swap           |                 arr[j + 1] = tmp1;
·              |                 swapped = true;
·              |             }
·              |         }
pass-end       |         if (!swapped) {
·              |             break;
·              |         }
·              |     }
·              | }"
`;

exports[`Transpiler 스냅샷 > bubblesort → javascript 1`] = `
"·              | function bubblesort(arr) {
·              |   let n = arr.length;
·              |   for (let p = 0; p < n - 1; p++) {
·              |     let swapped = false;
·              |     for (let j = 0; j < (n - 1) - p; j++) {
compare        |       if (arr[j] > arr[j + 1]) {
swap           |         [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
·              |         swapped = true;
·              |       }
·              |     }
pass-end       |     if (!swapped) {
·              |       break;
·              |     }
·              |   }
·              | }"
`;

exports[`Transpiler 스냅샷 > bubblesort → python 1`] = `
"·              | def bubblesort(arr):
·              |     n = len(arr)
·              |     for p in range(n - 1):
·              |         swapped = False
·              |         for j in range((n - 1) - p):
compare        |             if arr[j] > arr[j + 1]:
swap           |                 arr[j], arr[j + 1] = arr[j + 1], arr[j]
·              |                 swapped = True
pass-end       |         if not swapped:
·              |             break"
`;

exports[`Transpiler 스냅샷 > bubblesort → typescript 1`] = `
"·              | function bubblesort(arr: number[]): void {
·              |   let n = arr.length;
·              |   for (let p = 0; p < n - 1; p++) {
·              |     let swapped = false;
·              |     for (let j = 0; j < (n - 1) - p; j++) {
compare        |       if (arr[j] > arr[j + 1]) {
swap           |         [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
·              |         swapped = true;
·              |       }
·              |     }
pass-end       |     if (!swapped) {
·              |       break;
·              |     }
·              |   }
·              | }"
`;
